hphp/hack/test/typecheck/assignment_sequencing/indexing_increment.php.exp
File "indexing_increment.php", line 5, characters 17-17:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "indexing_increment.php", line 5, characters 17-18:
Unsequenced modification and access to local variable. Modified here (Typing[4143])
File "indexing_increment.php", line 5, characters 13-14:
And accessed here
