hphp/hack/test/typecheck/assignment_sequencing/indexing_increment.php
<?hh // strict

function foo(array<array<int>> $x): int {
  $y = 0;
  return $x[$y][$y++];
}
